--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ p {
 #box3 {
   margin-top: 30px;
   width: 300%;
+  hight: 100%;
   max-width: 600px;
   box-shadow: 3px 3px 2px;
   border-radius: 10px;
