--- a/style.css
+++ b/style.css
@@ -128,8 +128,8 @@ p {
 
 #box3 {
   margin-top: 0px;
-  width: 100%; /* Adjust to your needs */
-  height: 100%; /* Adjust to your needs */
+  width: 130%; /* Adjust to your needs */
+  height: 60px /* Adjust to your needs */
   max-width: none; /* Remove the max-width constraint */
   box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
@@ -138,6 +138,7 @@ p {
   background-repeat: no-repeat;
   background-position: center;
 }
+
 
 @media screen and (max-width: 768px) {
   h4 {
