--- a/style2.css
+++ b/style2.css
@@ -80,7 +80,19 @@ input {
   font-family: Caveat;
   margin-bottom: 15px;
 }
-
+#box3 {
+  margin-top: 13px;
+  width: 100%;
+  height: 100%;
+  max-width: 600px;
+  max-height: 600px;
+  box-shadow: 3px 3px 2px;
+  border-radius: 10px;
+  background-image: url("00013.png"); /* Replace with the path to your image */
+  background-size: cover; /* Adjust the image to cover the entire box */
+  background-repeat: no-repeat; /* Prevent the image from repeating */
+  background-position: center; /* Center the image in the box */
+}
 .password {
   font-family: DancingScript;
 }
@@ -117,15 +129,4 @@ p {
   border-size: 1px;
 }
 
-#box3 {
-  margin-top: -100px;
-  margin-left: -630px;
-  width: 300px;
-  box-shadow: 3px 3px 2px;
-  border-radius: 10px;
 
-  background-image: url("00013.png"); /* Replace with the path to your image */
-  background-size: cover; /* Adjust the image to cover the entire box */
-  background-repeat: no-repeat; /* Prevent the image from repeating */
-  background-position: center; /* Center the image in the box */
-}
