--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h3 {
 h4 {
   border: 0px inset #f8733d;
   border-radius: 15px;
-  color: red;
+  color: #a31587;
   font-family: DancingScript;
   font-size: 3em;
   text-align: center;
